# Tissue-Aware-Nuclei-Detection

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: slurm_example.sh  tand_default.yaml
scripts/: ensemble.py  evaluate.py  inference.py  train.py
tand/: __init__.py
tand/data/: __init__.py  dataset.py
tand/evaluation/: __init__.py  metrics.py  peak.py
tand/losses/: __init__.py  distribution.py  losses.py
tand/models/: __init__.py  backbone.py  efficientunet.py  fused_pointcls_unet.py  tand_net.py
tand/models/virchow2/: __init__.py  encoder.py  seg_head.py
tand/modules/: __init__.py  caam.py  film.py
tand/trainers/: __init__.py  base.py  trainer.py
tand/utils/: __init__.py  viz.py
tests/: test_film.py
